# bulk-terminal-cli

./: Cargo.toml  README.md  V2_SPEC.md
src/: app.rs  main.rs  market.rs  news.rs  ui.rs
