[package]
name = "bulk-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bulk-client = "0.1.0"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
rand = "0.9"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rss = "2.0"
tokio = { version = "1", features = ["full"] }
